# hermes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CRITIQUE.md  Dockerfile  Dockerfile.dev  GITHUB_ISSUE_24_COMMENT.md  LICENSE  Makefile  PHASE2_TESTING_IMPLEMENTATION.md  README.md  RISK_MAP.md  STACK_VERSION  TESTING.md  codecov.yml  docker-compose.dev.yml  docker-compose.test.hermes.yml  docker-compose.test.yml  docker-compose.yml  openapi.yaml  openapi_patch.yaml  pyproject.local.toml.example  pyproject.toml  requirements-ci.txt
.claude/: HANDOFF.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml  phase2-hermes-service.yml  publish.yml
.serena/: project.yml
containers/: STACK_VERSION  docker-compose.test.yml
deployments/: README.md  validate.py
deployments/kubernetes/: README.md  deployment.yaml  ingress.yaml
deployments/swarm/: README.md  stack.yml
docs/: CROSS_REPO_DEVELOPMENT.md  DEPENDENCY_TROUBLESHOOTING.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  MILVUS_INTEGRATION.md  TESTING.md  test-ui-spec.md
docs/issues/: ISSUE-281-CI-MINIO-MILVUS.md
docs/plans/: 2026-01-21-dependency-stabilization.md  hermes-task-queue.json
docs/scratch/: code-review-analysis-2026-01-07.md  comprehensive-code-review-2026-01-07.md
docs/scratch/hermes-50-standardization/: design.md  intake.md  spec-review.md
docs/scratch/issue-17-feedback/: intake.md
examples/: INTEGRATION.md  README.md  simple_usage.py
scripts/: dev.sh  export_openapi.py  lint.sh  run_integration_stack.sh  setup-local-dev.sh  test.sh
src/hermes/: __init__.py  canonical.py  combined_extractor.py  context_cache.py  embedding_provider.py  env.py  llm.py  main.py  milvus_client.py  name_normalizer.py  ner_provider.py  ontology_client.py  predicate_resolver.py  proposal_builder.py  relation_extractor.py  relation_registry.py  relation_synonyms.py  services.py  type_registry.py
src/hermes/static/: index.html
src/hermes/static/js/: app.js
src/hermes/visual_providers/: __init__.py  clip_provider.py  jepa_provider.py
tests/: README.md  conftest.py  test_api.py  test_embed_batch_endpoint.py  test_embeddings.py  test_error_handling.py  test_hermes_integration.py  test_llm.py  test_llm_provider.py  test_milvus_client.py  test_milvus_embedding_dim.py  test_milvus_integration.py  test_name_cluster.py  test_naming.py  test_neo4j_linkage.py  test_nlp_operations.py  test_performance.py  test_relation_synonyms_endpoint.py  test_type_cluster.py  test_type_registry.py  test_ui.py
tests/e2e/: README.md
tests/e2e/stack/hermes/: STACK_VERSION  docker-compose.test.yml
tests/hermes/: __init__.py  test_api.py  test_milvus_client.py  test_milvus_integration.py
tests/integration/: test_hermes_integration.py  test_milvus_dim_recreate.py  test_milvus_integration.py  test_milvus_persist_rowcount.py  test_otel_smoke.py
tests/performance/: test_performance.py
tests/unit/: test_canonical.py  test_canonical_predicate.py  test_clip_integration.py  test_clip_provider.py  test_combined_extractor.py  test_context_cache.py  test_context_injection.py  test_embed_visual_endpoint.py  test_embedding_provider.py  test_error_handling.py  test_jepa_integration.py  test_jepa_provider.py  test_llm_endpoint_dual_proposal.py  test_milvus_client.py  test_milvus_ensure_collection.py  test_name_normalizer.py  test_ner_provider.py  test_ontology_client.py  test_openapi_conformance.py  test_opportunistic_context.py  test_otel_spans.py  test_predicate_resolver.py  test_predicate_resolver_wiring.py  test_proposal_builder.py  test_relation_extractor.py  test_relation_registry.py  test_relation_synonyms.py
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
