[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "Stateless language & embedding tools for Project LOGOS"
readme = "README.md"
license = "MIT"
authors = ["Project LOGOS Team"]
keywords = ["nlp", "embeddings", "speech", "tts", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "hermes", from = "src"}]

[tool.poetry.scripts]
hermes = "hermes.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic = ">=2.0.0"
python-multipart = ">=0.0.6"
httpx = ">=0.25.0"
pymilvus = ">=2.3.0"
python-dotenv = ">=1.0.0"
logos-foundry = {git = "https://github.com/c-daly/logos.git", tag = "v0.2.0"}

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = ">=2.0.0,<2.10.0"
torchaudio = ">=2.0.0,<2.10.0"
openai-whisper = ">=20231117"
TTS = {version = ">=0.22.0", python = "<3.12"}
spacy = ">=3.7.0"
sentence-transformers = ">=2.2.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.21.0"
pytest-benchmark = ">=4.0.0"
httpx = ">=0.25.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
mypy = ">=1.0.0"
pymilvus = ">=2.3.0"
neo4j = ">=5.0.0"
pre-commit = ">=3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing imports for optional ML dependencies
[[tool.mypy.overrides]]
module = [
    "whisper",
    "whisper.*",
    "TTS",
    "TTS.*",
    "spacy",
    "spacy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "pymilvus",
    "pymilvus.*",
    "logos_config",
    "logos_config.*",
    "logos_test_utils",
    "logos_test_utils.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hermes --cov-report=term-missing --cov-fail-under=60"
