[project]
name = "hermes"
version = "0.1.0"
description = "Stateless language & embedding tools for Project LOGOS"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Project LOGOS Team"}
]
keywords = ["nlp", "embeddings", "speech", "tts", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pymilvus>=2.3.0",
    "pandas>=2.0.0",
    # logos-foundry provides logos_config and logos_test_utils
    "logos-foundry @ git+https://github.com/c-daly/logos.git@v0.6.0 ; python_version >= '3.12' and python_version < '4.0'",
    "numpy>=1.24.0,<2.4",
    "redis>=5.0.0",
]

[project.optional-dependencies]
# OpenTelemetry observability (optional, graceful fallback when absent)
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
# ML dependencies with CPU-only PyTorch (default, faster install, no CUDA)
ml = [
    "torch>=2.0.0,<2.10.0",
    "torchaudio>=2.0.0,<2.10.0",
    "openai-whisper>=20231117",
    "TTS>=0.22.0; python_version < '3.12'",
    "spacy>=3.7.0; python_version < '3.14'",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0,<2.4",
]
# ML dependencies with GPU support (CUDA, larger download)
ml-gpu = [
    "openai-whisper>=20231117",
    "TTS>=0.22.0; python_version < '3.12'",
    "spacy>=3.7.0; python_version < '3.14'",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0,<2.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pymilvus>=2.3.0",
    "neo4j>=5.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
hermes = "hermes.main:main"

[tool.poetry]
packages = [{include = "hermes", from = "src"}]

[tool.poetry.dependencies]
# logos-foundry must be declared here for Poetry to resolve git deps
logos-foundry = {git = "https://github.com/c-daly/logos.git", tag = "v0.6.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before config-dependent imports
"src/hermes/main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing imports for optional ML dependencies
[[tool.mypy.overrides]]
module = [
    "whisper",
    "whisper.*",
    "TTS",
    "TTS.*",
    "spacy",
    "spacy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "pymilvus",
    "pymilvus.*",
    "logos_config",
    "logos_config.*",
    "logos_test_utils",
    "logos_test_utils.*",
    "logos_observability",
    "logos_observability.*",
    "opentelemetry",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hermes --cov-report=term-missing"
markers = [
    "unit: fast tests with no external services",
    "integration: tests requiring infrastructure services (Neo4j, Milvus)",
    "e2e: end-to-end tests requiring full stack",
    "slow: marks tests as slow",
]
